Moved classes to other package